# python-oop-project-101

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
tests/: test_dict_validator.py  test_list_validator.py  test_number_validator.py  test_own_validators.py  test_string_validator.py  test_validator.py
validator/: validator.py
