[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Data Validator"
authors = ["Mickle <putilovms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
  { include = "validator" },
]
